<resources>
    <string name="app_name">Taste Of The World</string>
    <string name="title_activity_canada">Canada</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_a_country">Select a \nCountry</string>
    <string name="guyanarecipies">guyanaRecipies</string>
    <string name="mexicorecipies">mexicoRecipies</string>
    <string name="japanrecipies">japanRecipies</string>
    <string name="canadarecipies">canadaRecipies</string>
    <string name="enfrijoladas_bean_fold_tortilla">Enfrijoladas (Bean Fold Tortilla)</string>
    <string name="sopa_de_tortilla_tortilla_soup">Sopa de tortilla (Tortilla soup)</string>
    <string name="chile_en_nogada">Chile en Nogada</string>
    <string name="butter_tart">Butter Tart</string>
    <string name="beaver_tail">Beaver Tail</string>
    <string name="poutine">Poutine</string>
    <string name="tempura_nice_cream">Tempura \nIce Cream</string>
    <string name="miso_soup">Miso Soup</string>
    <string name="fried_rice_nw_shrimp">Fried Rice \nw/ Shrimp</string>
    <string name="pepperpot_nsoup">Pepperpot \nSoup</string>
    <string name="chicken_curry">Chicken Curry</string>
    <string name="saltfish_nand_bake">Saltfish \nand Bake</string>
</resources>