<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuyanaRecipes">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saltfish_nand_bake"
        android:textSize="25sp"
        android:onClick="onClickFish"
        app:layout_constraintBottom_toTopOf="@+id/fish"
        android:id="@+id/dish_Two"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chicken_curry"
        android:textSize="25sp"
        android:onClick="onClickChicken"
        app:layout_constraintBottom_toTopOf="@+id/chicken"
        android:id="@+id/dish_Three"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pepperpot_nsoup"
        android:onClick="onClickPepper"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/pepperpot"
        android:id="@+id/dish_Four"
        />

    <ImageView
        android:id="@+id/pepperpot"
        android:layout_width="415dp"
        android:layout_height="150dp"

        android:src="@drawable/pepperpot"
        app:layout_constraintBottom_toTopOf="@id/dish_Three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/chicken"
        android:layout_width="411dp"
        android:layout_height="132dp"

        android:src="@drawable/chicken"
        app:layout_constraintBottom_toTopOf="@id/dish_Two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/fish"
        android:layout_width="410dp"
        android:layout_height="119dp"
        android:src="@drawable/fish"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>