<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JapanRecipies">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fried_rice_nw_shrimp"
        android:textSize="25sp"
        android:onClick="onClickFriedRice"
        app:layout_constraintBottom_toTopOf="@+id/ShrimpFriedRice"
        android:id="@+id/dish_Two"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miso_soup"
        android:textSize="25sp"
        android:onClick="onClickMiso"
        app:layout_constraintBottom_toTopOf="@+id/Miso"
        android:id="@+id/dish_Three"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempura_nice_cream"
        android:onClick="onClickTempuraIce"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tempuraIceCream"
        android:id="@+id/dish_Four"
        />

    <ImageView
        android:id="@+id/tempuraIceCream"
        android:layout_width="411dp"
        android:layout_height="132dp"

        android:src="@drawable/tempuraice"
        app:layout_constraintBottom_toTopOf="@id/dish_Three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/Miso"
        android:layout_width="421dp"
        android:layout_height="144dp"

        android:src="@drawable/miso"
        app:layout_constraintBottom_toTopOf="@id/dish_Two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ShrimpFriedRice"
        android:layout_width="410dp"
        android:layout_height="119dp"
        android:src="@drawable/shrimpfriedrice"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>